# jinja-pytest

./: setup.cfg  tox.ini
src/magic/: __init__.py
tests/: test_a.py
