[metadata]
name = magic

[options]
zip_safe = False
packages = find:

[options.extras_require]
testing =
    pytest >= 4.0.0, < 6

[options.entry_points]
pytest11 =
    what = magic

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[options.package_data]
magic =
    templates/*.txt
